[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/traps/onigawara-head.png" type="Texture" id=1]
[ext_resource path="res://src/objects/CrushingRock.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.8371, 15.3219 )

[node name="CrushingRock" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
mode = 2
mass = 10.0
physics_material_override = SubResource( 1 )
gravity_scale = 4.0
contacts_reported = 1
contact_monitor = true
can_sleep = false
linear_velocity = Vector2( 0, 1 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.15749, 0.41741 )
shape = SubResource( 2 )

[node name="CoolOffTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="InitialDelayTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_CrushingRock_body_entered"]
[connection signal="timeout" from="CoolOffTimer" to="." method="_on_CoolOffTimer_timeout"]
[connection signal="timeout" from="InitialDelayTimer" to="." method="_on_InitialDelayTimer_timeout"]
